@startuml

    !include ../lexakai/lexakai.theme
    
    title "com.telenav.lexakai.builders.grouper"
    
    interface Comparable
    interface Iterable
    
    Comparable <|-- MethodGroup
    Iterable <|-- MethodGroup
    class MethodGroup
    {
        --(constructors)--
        +MethodGroup(String)
        --
        +String uml()
        --(collection)--
        +boolean add(UmlMethod)
        +Count count()
        +UmlMethod first()
        +boolean isEmpty()
        +int size()
        +List<UmlMethod> sorted()
        --(naming)--
        +void name(String name)
        +String name()
    }
    
    class MethodGroupNameGuesser
    {
        --(constructors)--
        +MethodGroupNameGuesser(LexakaiProject)
        --
        +Set<String> groupNames(UmlMethod)
    }
    
    class MethodGrouper
    {
        --(constructors)--
        +MethodGrouper(UmlType)
        --
        +MethodGroups groups()
        --(iteration)--
        +MethodGroups next(List<UmlMethod> methods)
    }
    
    class MethodGroups
    {
        --
        +MethodGroup staticMethods()
        --(collection)--
        +void add(UmlConstructor)
        +void add(String groupName, UmlMethod)
        +void add(MethodGroup)
        +Iterable<MethodGroup> allGroups()
        +List<UmlConstructor> constructors()
        +boolean isEmpty()
        +Iterable<MethodGroup> namedGroups()
        --(logical)--
        +MethodGroup none()
        --(math)--
        +MethodGroup largest()
    }
    
@enduml

